--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <label>Entertainment</label><input type="number" class="expense want" value="2000">
         <label>Subscriptions</label><input type="number" class="expense want" value="800">
         <label>Travel</label><input type="number" class="expense want" value="1500">
-        <label>Others</label><input type="number" class="expense need" value="2000">
+        <label>Others</label><input type="number" class="expense want" value="2000">
       </div>
     </div>
 
