--- a/analysis.html
+++ b/analysis.html
@@ -128,7 +128,7 @@
       <p>Total Income: <strong id="totalIncome"></strong></p>
       <p>Total Expenses: <strong id="totalExpenses"></strong></p>
       <p>Total Savings: <strong id="totalSavings"></strong></p>
-      <p>Net Balance: <strong id="balance"></strong></p>
+      <p>Idle Funds: <strong id="balance"></strong></p>
       <p>Savings Ratio: <strong id="savingRatio"></strong></p>
       <p>Needs vs Wants: <strong id="nwRatio"></strong></p>
     </div>
