--- a/analysis.html
+++ b/analysis.html
@@ -16,47 +16,47 @@
       --text: #e5e7eb;
       --good: #86efac;
       --warn: #fde68a;
-      --bad: #fecaca
+      --bad: #fecaca;
     }
 
     body {
       margin: 0;
       background: var(--bg);
       color: var(--text);
-      font-family: Inter
+      font-family: Inter;
     }
 
     header {
       text-align: center;
-      padding: 20px
+      padding: 20px;
     }
 
     main {
       max-width: 1100px;
       margin: auto;
-      padding: 16px
+      padding: 16px;
     }
 
     .card {
       background: var(--card);
       border-radius: 16px;
       padding: 16px;
-      margin-bottom: 16px
+      margin-bottom: 16px;
     }
 
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 16px
+      gap: 16px;
     }
 
     h2 {
-      margin-bottom: 10px
+      margin-bottom: 10px;
     }
 
     .metric {
-      font-size: .9rem;
-      margin: 6px 0
+      font-size: 0.9rem;
+      margin: 6px 0;
     }
 
     .chart-box {
@@ -69,17 +69,9 @@
       height: 100% !important;
     }
 
-    .good {
-      color: var(--good)
-    }
-
-    .warn {
-      color: var(--warn)
-    }
-
-    .bad {
-      color: var(--bad)
-    }
+    .good { color: var(--good); }
+    .warn { color: var(--warn); }
+    .bad { color: var(--bad); }
 
     button {
       background: #22c55e;
@@ -96,181 +88,216 @@
       align-items: center;
       margin-bottom: 12px;
     }
+
+    ul {
+      padding-left: 18px;
+    }
+
+    li {
+      margin-bottom: 10px;
+      line-height: 1.5;
+    }
   </style>
 </head>
 
 <body>
 
-  <header>
-    <h1>Budget Analysis Dashboard</h1>
-    <p>See your money clearly</p>
-  </header>
+<header>
+  <h1>Budget Analysis Dashboard</h1>
+  <p>See your money clearly</p>
+</header>
 
-  <main>
+<main>
 
-    <div class="top-actions">
-      <button onclick="goBack()">← Go Back</button>
-      <strong id="verdict"></strong>
-    </div>
+  <div class="top-actions">
+    <button onclick="goBack()">Go Back</button>
+    <strong id="verdict"></strong>
+  </div>
 
-    <!-- SUMMARY -->
+  <!-- SUMMARY -->
+  <div class="card">
+    <h2>Summary</h2>
+    <p class="metric">Total Income: ₹<span id="income"></span></p>
+    <p class="metric">
+      Needs: <span id="needs"></span>% |
+      Wants: <span id="wants"></span>% |
+      Savings: <span id="savings"></span>%
+    </p>
+    <p class="metric">Budget Health Score: <strong id="score"></strong>/100</p>
+  </div>
+
+  <!-- TOTALS -->
+  <div class="card">
+    <h2>Detailed Financial Breakdown</h2>
+    <p>Total Income: <strong id="totalIncome"></strong></p>
+    <p>Total Expenses: <strong id="totalExpenses"></strong></p>
+    <p>Total Savings: <strong id="totalSavings"></strong></p>
+    <p>Idle Funds: <strong id="balance"></strong></p>
+    <p>Savings Ratio: <strong id="savingRatio"></strong></p>
+    <p>Needs vs Wants: <strong id="nwRatio"></strong></p>
+  </div>
+
+  <!-- GAP -->
+  <div class="card">
+    <h2>Gap from Ideal (50–30–20)</h2>
+    <p class="metric">Needs Gap: <span id="needsGap"></span>%</p>
+    <p class="metric">Wants Gap: <span id="wantsGap"></span>%</p>
+    <p class="metric">Savings Gap: <span id="savingsGap"></span>%</p>
+  </div>
+
+  <!-- CHARTS -->
+  <div class="grid">
     <div class="card">
-      <h2>Summary</h2>
-      <p class="metric">Total Income: ₹<span id="income"></span></p>
-      <p class="metric">Needs: <span id="needs"></span>% | Wants: <span id="wants"></span>% | Savings: <span
-          id="savings"></span>%</p>
-      <p class="metric">Budget Health Score: <strong id="score"></strong>/100</p>
-    </div>
-
-    <!-- TOTALS -->
-    <div class="card">
-      <h2>Detailed Financial Breakdown</h2>
-      <p>Total Income: <strong id="totalIncome"></strong></p>
-      <p>Total Expenses: <strong id="totalExpenses"></strong></p>
-      <p>Total Savings: <strong id="totalSavings"></strong></p>
-      <p>Idle Funds: <strong id="balance"></strong></p>
-      <p>Savings Ratio: <strong id="savingRatio"></strong></p>
-      <p>Needs vs Wants: <strong id="nwRatio"></strong></p>
-    </div>
-
-    <!-- GAP -->
-    <div class="card">
-      <h2>Gap from Ideal (50–30–20)</h2>
-      <p class="metric">Needs Gap: <span id="needsGap"></span>%</p>
-      <p class="metric">Wants Gap: <span id="wantsGap"></span>%</p>
-      <p class="metric">Savings Gap: <span id="savingsGap"></span>%</p>
-    </div>
-
-    <!-- CHARTS -->
-    <div class="grid">
-      <div class="card">
-        <h2>Actual vs Ideal</h2>
-        <div class="chart-box"><canvas id="barChart"></canvas></div>
-      </div>
-
-      <div class="card">
-        <h2>Budget Distribution</h2>
-        <div class="chart-box"><canvas id="pieChart"></canvas></div>
-      </div>
+      <h2>Actual vs Ideal</h2>
+      <div class="chart-box"><canvas id="barChart"></canvas></div>
     </div>
 
     <div class="card">
-      <h2>Alignment Trend</h2>
-      <div class="chart-box"><canvas id="lineChart"></canvas></div>
+      <h2>Budget Distribution</h2>
+      <div class="chart-box"><canvas id="pieChart"></canvas></div>
     </div>
+  </div>
 
-    <!-- INSIGHTS -->
-    <div class="card">
-      <h2>Actionable Insights</h2>
-      <ul id="insights"></ul>
-    </div>
+  <div class="card">
+    <h2>Alignment Trend</h2>
+    <div class="chart-box"><canvas id="lineChart"></canvas></div>
+  </div>
 
-  </main>
+  <!-- INSIGHTS -->
+  <div class="card">
+    <h2>Actionable Insights</h2>
+    <ul id="insights"></ul>
+  </div>
 
-  <script>
-    // ---------- NAV ----------
-    function goBack() {
-      window.location.href = 'index.html'
-    }
+</main>
 
-    // ---------- DATA ----------
-    const data = JSON.parse(sessionStorage.getItem('budgetData'))
-    if (!data) goBack()
+<script>
+  function goBack() {
+    window.location.href = 'index.html';
+  }
 
-    const IDEAL = { needs: 50, wants: 30, savings: 20 }
+  const data = JSON.parse(sessionStorage.getItem('budgetData'));
+  if (!data) goBack();
 
-    // Percentages
-    const { needsPct, wantsPct, savingsPct } = data
+  const IDEAL = { needs: 50, wants: 30, savings: 20 };
 
-    // Totals
-    const totalIncome = data.income
-    const totalExpenses = data.needs + data.wants
-    const totalSavings = data.savings
-    const netBalance = data.balance
+  const { needsPct, wantsPct, savingsPct } = data;
 
-    // Gaps
-    const gaps = {
-      needs: needsPct - IDEAL.needs,
-      wants: wantsPct - IDEAL.wants,
-      savings: savingsPct - IDEAL.savings
-    }
+  const totalIncome = data.income;
+  const totalExpenses = data.needs + data.wants;
+  const totalSavings = data.savings;
+  const netBalance = data.balance;
 
-    // Score
-    let score = 100 - (Math.abs(gaps.needs) + Math.abs(gaps.wants) + Math.abs(gaps.savings))
-    score = Math.max(score, 0)
+  const gaps = {
+    needs: needsPct - IDEAL.needs,
+    wants: wantsPct - IDEAL.wants,
+    savings: savingsPct - IDEAL.savings
+  };
 
-    // ---------- UI POPULATION ----------
-    const set = (id, val) => document.getElementById(id).innerText = val
+  let score = 100 - (Math.abs(gaps.needs) + Math.abs(gaps.wants) + Math.abs(gaps.savings));
+  score = Math.max(score, 0);
 
-    set('income', totalIncome)
-    set('needs', needsPct)
-    set('wants', wantsPct)
-    set('savings', savingsPct)
-    set('score', score)
+  const set = (id, val) => document.getElementById(id).innerText = val;
 
-    set('totalIncome', `₹${totalIncome}`)
-    set('totalExpenses', `₹${totalExpenses}`)
-    set('totalSavings', `₹${totalSavings}`)
-    set('balance', `₹${netBalance}`)
-    set('savingRatio', `${savingsPct}%`)
-    set('nwRatio', `${needsPct}% needs / ${wantsPct}% wants`)
+  set('income', totalIncome);
+  set('needs', needsPct);
+  set('wants', wantsPct);
+  set('savings', savingsPct);
+  set('score', score);
 
-    set('needsGap', gaps.needs)
-    set('wantsGap', gaps.wants)
-    set('savingsGap', gaps.savings)
+  set('totalIncome', `₹${totalIncome}`);
+  set('totalExpenses', `₹${totalExpenses}`);
+  set('totalSavings', `₹${totalSavings}`);
+  set('balance', `₹${netBalance}`);
+  set('savingRatio', `${savingsPct}%`);
+  set('nwRatio', `${needsPct}% needs / ${wantsPct}% wants`);
 
-    // Verdict
-    const verdict = document.getElementById('verdict')
-    verdict.className = netBalance < 0 ? 'bad' : score < 60 ? 'warn' : 'good'
-    verdict.innerText =
-      netBalance < 0 ? 'Over Budget' :
-        score < 60 ? 'Needs Improvement' :
-          'Healthy Budget'
+  set('needsGap', gaps.needs);
+  set('wantsGap', gaps.wants);
+  set('savingsGap', gaps.savings);
 
-    // Insights
-    const insights = document.getElementById('insights')
-    if (gaps.needs > 0) insights.innerHTML += `<li>Reduce fixed costs by ${gaps.needs}% of income.</li>`
-    if (gaps.wants > 0) insights.innerHTML += `<li>Cut lifestyle spending by ${gaps.wants}%.</li>`
-    if (gaps.savings < 0) insights.innerHTML += `<li>Increase savings by ${Math.abs(gaps.savings)}%.</li>`
-    if (!insights.innerHTML) insights.innerHTML = '<li>Excellent balance. Maintain this structure.</li>'
+  const verdict = document.getElementById('verdict');
+  verdict.className = netBalance < 0 ? 'bad' : score < 60 ? 'warn' : 'good';
+  verdict.innerText =
+    netBalance < 0 ? 'Over Budget' :
+    score < 60 ? 'Needs Improvement' :
+    'Healthy Budget';
 
-    // ---------- CHARTS ----------
-    const commonOptions = { responsive: true, maintainAspectRatio: false }
+  // -------- SMART INSIGHTS --------
+  const insights = document.getElementById('insights');
+  insights.innerHTML = '';
 
-    new Chart(barChart, {
-      type: 'bar',
-      data: {
-        labels: ['Needs', 'Wants', 'Savings'],
-        datasets: [
-          { label: 'Actual %', data: [needsPct, wantsPct, savingsPct] },
-          { label: 'Ideal %', data: [50, 30, 20] }
-        ]
-      },
-      options: commonOptions
-    })
+  if (gaps.needs > 5) {
+    insights.innerHTML += `
+      <li>🏠 <strong>Your essentials are costing more than they should.</strong><br>
+      Needs are about ${gaps.needs}% higher than ideal. Review rent, EMIs, utilities, or subscriptions — trimming even one can unlock savings.</li>`;
+  } else if (gaps.needs < -5) {
+    insights.innerHTML += `
+      <li>👍 <strong>Your needs spending is under control.</strong><br>
+      You’re managing essentials efficiently. Just ensure you’re not cutting corners on health or insurance.</li>`;
+  }
 
-    new Chart(pieChart, {
-      type: 'pie',
-      data: {
-        labels: ['Needs', 'Wants', 'Savings'],
-        datasets: [{ data: [needsPct, wantsPct, savingsPct] }]
-      },
-      options: commonOptions
-    })
+  if (gaps.wants > 5) {
+    insights.innerHTML += `
+      <li>🎯 <strong>Lifestyle spending is creeping up.</strong><br>
+      Wants are ${gaps.wants}% above ideal. Try setting a monthly “fun money” limit — boundaries make spending stress-free.</li>`;
+  } else if (gaps.wants < -5) {
+    insights.innerHTML += `
+      <li>💡 <strong>You’re very disciplined with wants.</strong><br>
+      That’s great — budgeting should still allow enjoyment. Balance beats restriction.</li>`;
+  }
 
-    new Chart(lineChart, {
-      type: 'line',
-      data: {
-        labels: ['Needs', 'Wants', 'Savings'],
-        datasets: [
-          { label: 'Actual', data: [needsPct, wantsPct, savingsPct] },
-          { label: 'Ideal', data: [50, 30, 20] }
-        ]
-      },
-      options: commonOptions
-    })
-  </script>
+  if (gaps.savings < 0) {
+    insights.innerHTML += `
+      <li>💰 <strong>Savings need attention.</strong><br>
+      You’re saving ${Math.abs(gaps.savings)}% less than ideal. Automate savings right after income hits — consistency beats motivation.</li>`;
+  } else if (gaps.savings > 5) {
+    insights.innerHTML += `
+      <li>🚀 <strong>You’re saving like a pro.</strong><br>
+      Strong savings rate. Consider investing part of it so inflation doesn’t slowly eat it away.</li>`;
+  }
+
+  if (!insights.innerHTML) {
+    insights.innerHTML = `
+      <li>🌟 <strong>This is a well-balanced budget.</strong><br>
+      You’re close to the 50–30–20 rule. Keep tracking monthly and adjust as life changes.</li>`;
+  }
+
+  const commonOptions = { responsive: true, maintainAspectRatio: false };
+
+  new Chart(barChart, {
+    type: 'bar',
+    data: {
+      labels: ['Needs', 'Wants', 'Savings'],
+      datasets: [
+        { label: 'Actual %', data: [needsPct, wantsPct, savingsPct] },
+        { label: 'Ideal %', data: [50, 30, 20] }
+      ]
+    },
+    options: commonOptions
+  });
+
+  new Chart(pieChart, {
+    type: 'pie',
+    data: {
+      labels: ['Needs', 'Wants', 'Savings'],
+      datasets: [{ data: [needsPct, wantsPct, savingsPct] }]
+    },
+    options: commonOptions
+  });
+
+  new Chart(lineChart, {
+    type: 'line',
+    data: {
+      labels: ['Needs', 'Wants', 'Savings'],
+      datasets: [
+        { label: 'Actual', data: [needsPct, wantsPct, savingsPct] },
+        { label: 'Ideal', data: [50, 30, 20] }
+      ]
+    },
+    options: commonOptions
+  });
+</script>
 
 </body>
-
 </html>
