--- a/analysis.html
+++ b/analysis.html
@@ -139,7 +139,7 @@
 
   <!-- GAP -->
   <div class="card">
-    <h2>Gap from Ideal (50–30–20)</h2>
+    <h2>Gap from Ideal</h2>
     <p class="metric">Needs Gap: <span id="needsGap"></span>%</p>
     <p class="metric">Wants Gap: <span id="wantsGap"></span>%</p>
     <p class="metric">Savings Gap: <span id="savingsGap"></span>%</p>
